--- a/src/project.css
+++ b/src/project.css
@@ -83,8 +83,7 @@ body{
 
 }
 .card:hover{
-    transform: scale(1.07);
-    box-shadow: rgba(34, 26, 26, 0.521) 0 0 8px 0; 
+    box-shadow: rgba(15, 10, 10, 0.603) 0 0 8px 0; 
 }
 .card1{
     pointer-events: auto;
@@ -92,15 +91,11 @@ body{
     min-width: 320px;
     min-height: 110px;
     position: relative;
+    
     margin-bottom: 20px;
     padding-bottom: 30px;
-/*    background: black;*/
-    /* background: #ced6a3c5; */
-    color: #363636;
-    /* text-decoration: beige; */
     box-shadow: rgba(0,0,0, 0.19) 0 0 18px 0; 
     border-radius: 4px;
-    /* opacity: 0.4; */
 }
 .card1:hover{
     opacity: 1;
@@ -108,15 +103,25 @@ body{
     box-shadow: rgba(15, 10, 10, 0.603) 0 0 8px 0; 
 }
 .cardPlus{
+    font-size: 40px;
     border: none;
     background: none;
+    display: flex;
+    justify-content: center;
     width: 320px;
     height: 110px;
+    align-items: center;
+}
+.cardPlus:hover{
+    cursor: pointer;
 }
 
 @media (max-width: 700px){
     .card{
-        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        /* width: 100%; */
     }
 }
 @media (min-width: 700px){
@@ -139,30 +144,44 @@ body{
     /* bottom: 0; */
     width: 100%;
     display: flex;
-    /* flex-wrap: wrap; */
-    justify-content: flex-start;
+    /* justify-content: flex-start; */
     box-sizing: border-box;
-    /* min-inline-size: 1;
-    max-inline-size: 50; */
-    /* height: 31px; */
-    /* overflow: hidden; */
-    /* font-size: 12px;
-    line-height: 16px; */
+    word-wrap:break-word;
 }
 .textdf{
     padding: 3% 6% 3% 6%;
-    min-width: 300px;
+    min-width: 280px;
     min-height: 100px;
     border: none;
     background: none;
     word-wrap:break-word;
+    resize: none;
 }
-.h3asd{
+.inputh{
+    width: 200px;
+    word-break: break-word;
+    /* word-break: break-all; */
     font-size: 1.2em;
     line-height: 1.2;
     padding: 0 3.5%;
     margin: 0;
     justify-content: space-between;
+    border:none;
+    background: none;
+}
+.h3asd{
+    word-break: break-word;
+    /* word-break: break-all; */
+    font-size: 1.2em;
+    line-height: 1.2;
+    padding: 0 3.5%;
+    margin: 0;
+    justify-content: space-between;
+    border:none;
+    background: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
 }
 .card .card-meta{
     min-height: 0;
@@ -174,37 +193,23 @@ body{
     bottom: 0ex;
 }
 .but {
+    font-size: 16px;
     background: 20px;
     border: none;
-    width: auto;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
 }
 .but:hover{
     display:block; 
-     cursor: pointer;
+    cursor: pointer;
     background-color: rgba(40, 60, 82, 0.377); 
 }
-/* .card input{
-    font-size: 1.2em;
-    line-height: 1.2;
-    padding: 5px 3.5%;
-    margin: 5;
-    justify-content: space-between;
-    background: rgba(104, 155, 210, 0.562);
-    padding: 3.5% 0 2.5% 0;
-    color: white;
-    text-transform: uppercase;
-    /* bottom: 0; 
-    width: 100%;
-    /* display: flex;
-    /* flex-wrap: wrap; */
-    /*justify-content: flex-start;
-    box-sizing: border-box; 
-    font: bold;
-    border: none;
-} */
+
 .inpt{
+    word-wrap:break-word;
     border: none;
     background: none;
 }
